# trypydanticai

./: main.py  pyproject.toml
