[project]
name = "testpydanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[mcp,openai]>=1.35.0",
    "restate-sdk[serde]>=0.13.2",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
restate-sdk = { path = "../../sdk-python/dist/restate_sdk-0.13.2-cp313-cp313-macosx_14_0_arm64.whl" }
